app/static/css/style.css
@font-face {
    font-family: GlacialIndifferenceRegular;
    src: url(fonts/GlacialIndifference-Regular.otf);

}

@font-face {
    font-family: GlacialIndifferenceBold;
    src: url(fonts/GlacialIndifference-Bold.otf);
}

:root {
    --primary: #67C5D2;
    --secondary: #FC8476;
    --tertiary: #FFE1A4;
    --detail-font: #FC8476;
    --text-color: #181818;

}


* {
    font-family: "GlacialIndifferenceRegular";
    color: var(--text-color);
    font-size: 16px;
    font-weight: normal;
    font-style: normal;
}


/* ul {
    font-weight: bold;
    font-style: italic;
} */

/* Beautified anchors */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/

html {
    scroll-behavior: smooth;
}

:target:before {
    content: "";
    display: block;
    height: 80px;
    margin: -80px 0 0;
}

/* Article images */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
img {
    display: inline-block;
}

.img-block {
    display: block;
}

.img-lg {
    width: 100%;
}

.img-md {
    width: 65%;
}

.img-sm {
    width: 25%;
}

/* Mediq queries for mobile devices */
@media only screen and (max-width: 786px) {
    img.img-lg {
        width: 100%;
    }

    img.img-md {
        width: 80%;
    }

    img.img-sm {
        width: 45%;
    }
}

.imgcenter {
    text-align: center;
    width: 100%;
}


a.btn {
    text-decoration: none;
}

.btn,
.btn:hover,
.btn:active,
.btn:active:focus {

    border: none;
    /* border-radius: 0; */
    padding: 12px 12px 12px 12px;

    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    color: var(--text-color);
    background-color: var(--primary);


}

.btn:hover,
.btn:active {
    /* background-color: var(--secondary); */
    /* background-color: #ECB5A3; */
    background-color: #74dfed;
    /* background-color: #EEE; */
    /* filter: brightness(1.1); */
}

.btn:active:focus {
    border-radius: 0;

}


.list-group-item.list-group-item-action.active,
.list-group-item.list-group-item-action.active:hover {
    padding: 12px 12px 12px 12px;

    font-size: 14px;
    font-weight: bold;
    color: var(--text-color);
    background-color: var(--primary);
    border-color: white;
}

.list-group-item.list-group-item-action.active:hover {
    background-color: #74dfed;
}

.my-btn {
    margin: 8px 8px 5px 5px;
}


/* Article page text */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
#page-content {
    min-height: 500px;

    font-size: 20px;
    text-align: justify;
    text-justify: inner-word;

}

#page-content h1,
#page-content h2 {
    font-weight: bold;
}




.center {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    /*width: 50%;*/
}



.img-banner {
    width: 100%;
    /* margin-bottom: 20px; */
}



#quiz-box {
    padding-bottom: 3cm;
}

#topBar {
    position: relative;
    margin: 0;
}

#topBar a {
    text-decoration: none;
}


#topBar a.btn {
    min-width: 100px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}


#profile,
#register{
    right: 60px;
}

#login,
#logout
 {
    right: 180px;
}


img#navbarLogo {
    margin-left: 90px;
    height: 120px;
    padding: 15px 15px 15px 15px;
}

@media only screen and (max-width: 768px) {
    #topBar a.btn {
        left: 0;
        transform: translate(0,0);
        bottom: 0;
        margin-bottom: -1px;
        position: relative;
        width: 100%;
        border-radius: 0;
    }
    img#navbarLogo{
        margin-bottom: 20px;
        margin-left: 0;
    }
}



/* Navbar*/
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
#navbar.navbar.navbar-custom {
    margin-top: 0;
    text-transform: uppercase;
    background-color: var(--primary);
}

#navbar .nav.navbar-nav.navbar-center li a {
    color: var(--text-color);
    font-weight: bold;
    /* font-size: 0.9em; */

}

.navbar-toggle,
.icon-bar {
    border: 1px solid var(--text-color);
}


#alerts {
    position: fixed;
    top: 0;
    z-index: 51;
}

#alerts div {
    width: 100vw;
}


/* Article index */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/

#article-navbar {
    position: sticky;
    top: 0;
    z-index: 40;
    background-color: var(--tertiary);
    text-transform: uppercase;
}

#article-navbar .nav.navbar-nav.navbar-center li a {
    color: var(--text-color);
    font-weight: bold;
    font-size: 1em;

}

.art-index {
    left: 5px;
    text-align: left;
    /* background-color: rgba(200, 200, 200, 0.2); */
}

.art-index .art-index-item a,
.art-index .art-index-item a:link,
.art-index .art-index-item a:visited,
.art-index .art-index-item a:active,
.art-index .art-index-item a:hover {
    text-decoration: none;
}


.art-index .art-index-item a {
    padding: 0;
    margin: 0;
    color: rgba(80, 80, 80, 0.5);
}

.art-index .art-index-item a:hover {
    font-size: 1.1em;
    /* font-family: "GlacialIndifferenceBold"; */
    font-weight: bold;
    color: rgba(59, 59, 59, 1);

}

@media only screen and (max-width: 786px) {
    .art-index {
        top: 10px;
    }

}


/* @media(hover: hover) and (pointer: fine) {
    .art-index .art-index-item a{
        font-size: 1.1em;
        font-family: "GlacialIndifferenceBold";
        color: rgba(59, 59, 59, 1);
        
    }
    
} */



/* Activity cards */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
.row.row-eq-height.cards .col-sm-4 .card {
    min-height: 28vw;
}

.card {
    width: 100%;
    padding: 15px;
    margin: 5px;
    background-color: var(--tertiary);
    border-radius: 5px;
}

/* .card .btn{
    position: relative;
    bottom: 0;
} */

.card .card-title {
    font-size: 1.2em;
    font-weight: bold;
}

.card .card-text {
    font-size: 0.9em;
}

.card .card-body img {
    width: 100%;
    height: 200px;
    max-height: 400px;
}

/* .card .card-body .btn {} */


/*Footer style*/
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
footer {
    margin-top: 80px;
    text-align: left;
    background-color: var(--tertiary);
}


footer h3 {
    text-transform: uppercase;
    color: #FC8476;
}

footer a:link,
footer a:visited,
footer a:hover,
footer a:active {
    text-decoration: none;
    color: #333;
}


footer a {
    overflow: hidden;
}

#footer-branding {
    text-align: center;
    /* background-color: white; */
}

#footerLogo {
    margin: 10px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
    /* background-color: white; */
    background-color: transparent;
    height: 180px;
    border-radius: 3px;
}

img.icon {
    display: inline-block;
    padding-bottom: 10pt;
    width: 30px;
    position: relative;
    transform: translateY(10%);
}

footer span {
    font-size: 2rem;
}

@media (max-width:991px) {
    footer {
        text-align: center;
    }
}

footer .copyright {
    margin-top: 30px;
    margin-bottom: 15px;
}

/* Carousel */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
#carouselContainer {
    margin: 0px;
    padding: 0px;
}

.carousel-inner>.item>img,
.carousel-inner>.item>a>img {
    width: 100vw;
    height: 41vw;
    margin: auto;
}

